<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:paddingLeft="20.0dip"
    android:paddingRight="20.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.huynhle.tim_tro.Activity.Login">
    <ScrollView
        android:id="@id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:focusableInTouchMode="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30.0dip">

                <Button
                    android:id="@+id/btnconnectFB"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20.0dip"
                    android:background="@drawable/loginfacebookselector"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/connect"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20.0dip"
                    android:background="@drawable/logingoogleselector"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/connect"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <TextView
                android:textColor="@color/colorMild"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginBottom="10.0dip"
                android:text="@string/hoac_email" />
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="@drawable/bgloginedittext"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15.0dip">
                <EditText
                    android:id="@+id/edtTaiKhoan"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/bgedittext"
                    android:layout_width="fill_parent"
                    android:layout_height="46.0dip"
                    android:hint="@string/email" />
                <View
                    android:background="@color/googlexammanh"
                    android:layout_width="fill_parent"
                    android:layout_height="0.30000007dip" />
                <EditText
                    android:id="@+id/edtMK"
                    android:textSize="18.0sp"
                    android:typeface="normal"
                    android:background="@drawable/bgsubedittext"
                    android:layout_width="fill_parent"
                    android:layout_height="46.0dip"
                    android:hint="@string/pass"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <Button
                android:background="@color/colorPrimary"
                android:id="@+id/btnDangNhap"
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginBottom="10.0dip"
                android:text="@string/dang_nhap"
                android:textColor="#ffffffff"
                android:textSize="18.0sp" />
            <Button
                android:background="#169b18"
                android:id="@+id/btnregister"
                android:textSize="16.0sp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="30.0dip"
                android:text="@string/tao_tk_moi" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
